# sdk-zephyr

./: CMakeLists.txt
.github/workflows/: compliance.yml
arch/common/: rom_start_offset.ld
boards/arm/bl5340_dvk/: bl5340_dvk_cpuapp_common-pinctrl.dtsi  bl5340_dvk_cpuapp_common.dtsi
boards/arm/nrf52840dk_nrf52840/: nrf52840dk_nrf52840-pinctrl.dtsi  nrf52840dk_nrf52840.dts  nrf52840dk_nrf52840_defconfig
boards/arm/nrf5340dk_nrf5340/: nrf5340_cpuapp_common.dtsi
boards/arm/thingy53_nrf5340/: Kconfig.defconfig  Kconfig.sysbuild  pm_static_thingy53_nrf5340_cpuapp.yml  thingy53_nrf5340_common-pinctrl.dtsi  thingy53_nrf5340_common.dts  thingy53_nrf5340_common.dtsi  thingy53_nrf5340_cpunet.dts
boards/nordic/thingy53/: Kconfig.sysbuild
cmake/flash/: CMakeLists.txt
cmake/modules/: extensions.cmake
drivers/flash/: Kconfig.nordic_qspi_nor  nrf_qspi_nor.c
include/zephyr/arch/arm/aarch32/cortex_m/scripts/: linker.ld
include/zephyr/storage/: flash_map.h
modules/: Kconfig.mcuboot
samples/hello_world/: config_bk  config_used  prj.conf
samples/hello_world/src/: main.c  other.c
samples/subsys/mgmt/mcumgr/smp_svr/: CMakeLists.txt  __BUILD  build.sh  do.overlay  flash.sh  overlay-recovery.conf  pm_static.yml  pm_static_nrf9160dk_nrf52840.yml  sysbuild.conf
samples/subsys/mgmt/mcumgr/smp_svr/boards/: nrf9160dk_nrf52840.overlay  nrf9160dk_nrf52840_0_14_0.overlay
samples/subsys/mgmt/mcumgr/smp_svr/child_image/: mcuboot.conf
samples/subsys/mgmt/mcumgr/smp_svr/child_image/mcuboot/boards/: nrf9160dk_nrf52840_0_14_0.overlay
samples/subsys/mgmt/mcumgr/smp_svr/configuration/nrf5340dk_nrf5340_cpuapp/: prj.conf
samples/subsys/mgmt/mcumgr/smp_svr/src/: main.c
scripts/ci/: check_compliance.py
scripts/pylib/twister/twisterlib/: environment.py
share/sysbuild/cmake/modules/: sysbuild_extensions.cmake
soc/arm/common/cortex_m/: arm_mpu_regions.c
subsys/bluetooth/host/: Kconfig
subsys/mgmt/mcumgr/: Kconfig
subsys/mgmt/mcumgr/grp/img_mgmt_client/: Kconfig
subsys/mgmt/mcumgr/grp/img_mgmt_client/src/: img_mgmt_client.c
subsys/mgmt/mcumgr/grp/os_mgmt_client/: Kconfig
subsys/mgmt/mcumgr/grp/os_mgmt_client/src/: os_mgmt_client.c
subsys/mgmt/mcumgr/smp/: CMakeLists.txt
subsys/mgmt/mcumgr/smp/src/: client.c  smp.c
subsys/storage/flash_map/: flash_map.c
tests/subsys/mgmt/mcumgr/mcumgr_client/src/: img_gr_stub.c
